<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login_Activity"
        android:fillViewport="true"
        android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/background"
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:background="@drawable/background_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="102dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/logo_setupswift"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView2" />

        <View
            android:id="@+id/containerCompoments"
            style="@style/ContainerComponents"
            android:layout_width="343dp"
            android:layout_height="295dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:hint="@string/email"
            android:textColorHint="#8F8F8F"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@id/containerCompoments"
            app:layout_constraintEnd_toEndOf="@id/containerCompoments"
            app:layout_constraintTop_toTopOf="@id/containerCompoments"/>

        <EditText
            android:autofillHints="password"
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:hint="@string/senha"
            android:textColorHint="#8F8F8F"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_lock"
            app:layout_constraintStart_toStartOf="@id/containerCompoments"
            app:layout_constraintEnd_toEndOf="@id/containerCompoments"
            app:layout_constraintTop_toBottomOf="@id/edit_email"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_acessar"
            style="@style/Button"
            android:text="@string/Acessar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"

        />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInBtn"
            style="@style/Button_Google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_acessar"

            />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:indeterminateTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerCompoments"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/text_cadastro"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressbar" />

<!--        <TextView-->
<!--            android:id="@+id/text_esq_senha"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="28dp"-->
<!--            android:text="Esqueceu a senha? Alterar"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="12sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/progressbar"-->
<!--            app:layout_constraintStart_toEndOf="@id/text_tela_cadastro"/>-->



    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>